[gd_scene load_steps=5 format=3 uid="uid://bxhq1mxv6ueph"]

[ext_resource type="Script" uid="uid://c06105l5ar4lg" path="res://scripts/menu_gui.gd" id="1_3ecco"]
[ext_resource type="FontFile" uid="uid://bvxn1h0o8xugn" path="res://assets/fonts/PixelOperator8.ttf" id="1_hr55n"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_c5r2e"]
bg_color = Color(0.65, 0.22294998, 0.17549998, 1)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color(0.43, 0.23377667, 0.1118, 1)
border_blend = true
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_3ecco"]
content_margin_left = 10.0
content_margin_top = 10.0
content_margin_right = 10.0
content_margin_bottom = 10.0
bg_color = Color(0.65541327, 0.35465544, 0.32076296, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.48, 0.25824, 0.110400006, 1)
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2

[node name="MenuGUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_3ecco")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.7858247, 0.7380538, 0.43717042, 1)

[node name="Main_menu" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Main_menu"]
layout_mode = 2

[node name="Start_btn" type="Button" parent="Main_menu/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_fonts/font = ExtResource("1_hr55n")
theme_override_font_sizes/font_size = 8
text = "Start"

[node name="Load_btn" type="Button" parent="Main_menu/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_fonts/font = ExtResource("1_hr55n")
theme_override_font_sizes/font_size = 8
text = "Load"

[node name="Settings_btn" type="Button" parent="Main_menu/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_fonts/font = ExtResource("1_hr55n")
theme_override_font_sizes/font_size = 8
text = "Settings"

[node name="Quit_btn" type="Button" parent="Main_menu/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_fonts/font = ExtResource("1_hr55n")
theme_override_font_sizes/font_size = 8
text = "Quit"

[node name="Settings_menu" type="CenterContainer" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.5, 0.5)

[node name="ColorRect2" type="ColorRect" parent="Settings_menu"]
layout_mode = 2
color = Color(0.84, 0.42504004, 0.4032, 1)

[node name="quit_settings_btn" type="Button" parent="Settings_menu/ColorRect2"]
unique_name_in_owner = true
z_index = 1
layout_mode = 0
offset_left = 80.0
offset_top = -78.0
offset_right = 115.0
offset_bottom = -43.0
size_flags_horizontal = 8
size_flags_vertical = 0
theme_override_styles/normal = SubResource("StyleBoxFlat_c5r2e")
text = "X"

[node name="PanelContainer" type="PanelContainer" parent="Settings_menu/ColorRect2"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -69.0
offset_top = -41.0
offset_right = 69.0
offset_bottom = 41.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_3ecco")

[node name="VBoxContainer" type="VBoxContainer" parent="Settings_menu/ColorRect2/PanelContainer"]
layout_mode = 2

[node name="settings_lbl" type="Label" parent="Settings_menu/ColorRect2/PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_fonts/font = ExtResource("1_hr55n")
text = "SETTINGS"

[node name="_spaces" type="Label" parent="Settings_menu/ColorRect2/PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "- - - - - - - - - - - - - -"

[node name="GridContainer" type="GridContainer" parent="Settings_menu/ColorRect2/PanelContainer/VBoxContainer"]
layout_mode = 2
columns = 2

[node name="dil_lbl" type="Label" parent="Settings_menu/ColorRect2/PanelContainer/VBoxContainer/GridContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_hr55n")
text = "Dil:"

[node name="MenuButton" type="OptionButton" parent="Settings_menu/ColorRect2/PanelContainer/VBoxContainer/GridContainer"]
layout_mode = 2
item_count = 2
popup/item_0/text = "Türkçe"
popup/item_0/id = 0
popup/item_1/text = "İngilizce"
popup/item_1/id = 1

[node name="music_lbl" type="Label" parent="Settings_menu/ColorRect2/PanelContainer/VBoxContainer/GridContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_hr55n")
text = "Muzik:"

[node name="CheckButton" type="CheckButton" parent="Settings_menu/ColorRect2/PanelContainer/VBoxContainer/GridContainer"]
layout_mode = 2
